--- a/moneymanager/pom.xml
+++ b/moneymanager/pom.xml
@@ -58,6 +58,42 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			  <groupId>io.jsonwebtoken</groupId>
+			  <artifactId>jjwt-api</artifactId>
+			  <version>0.11.5</version>
+		</dependency>
+		<dependency>
+			  <groupId>io.jsonwebtoken</groupId>
+			  <artifactId>jjwt-impl</artifactId>
+			  <version>0.11.5</version>
+			  <scope>runtime</scope>
+		</dependency>
+		<dependency>
+			  <groupId>io.jsonwebtoken</groupId>
+			  <artifactId>jjwt-jackson</artifactId>
+			  <version>0.11.5</version>
+			  <scope>runtime</scope>
+		</dependency>
+		<dependency>
+			  <groupId>org.apache.poi</groupId>
+			  <artifactId>poi-ooxml</artifactId>
+			  <version>5.2.5</version>
+		</dependency>
+		<dependency>
+    <groupId>ch.qos.logback</groupId>
+    <artifactId>logback-classic</artifactId>
+    <version>1.5.18</version>
+</dependency>
+
+<dependency>
+    <groupId>ch.qos.logback</groupId>
+    <artifactId>logback-core</artifactId>
+    <version>1.5.18</version>
+</dependency>
+
+
+		
 	</dependencies>
 
 	<build>
