--- a/moneymanager/src/main/resources/application.properties
+++ b/moneymanager/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 spring.application.name=moneymanager
+
+#Mysql Configuration
+
+spring.datasource.url=jdbc:mysql://localhost:3306/moneymanager
+spring.datasource.username =root
+spring.datasource.password =DaringDesi123
+
+
+
+server.servlet.context-path=/api/v1.0
+
+
+#JPA configuration
+
+# To allow Hibedrnate to create query
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.formate_sql =true
+
+
+
